***** Crop Section ***** - Found Cropping section smooth issue and fixed. - issue is in style.css with '*'

--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -15,11 +15,11 @@ font-family: 'Open Sans', sans-serif;*/
 
 
 * {
-	-moz-transition: all 0.3s ease-in-out;
+	/*-moz-transition: all 0.3s ease-in-out;
 	-webkit-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	-ms-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;*/
 }
 body {
 	margin: 0px;
